<resources>
    <string name="app_name">DocGL</string>
    <string name="btn_login">Log In</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="Join">Join</string>
    <string name="today">today!</string>
    <string name="firstname">First name:</string>
    <string name="lastname">Last name:</string>
    <string name="email">Email:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="home_txt1">You have no \nappointments yet</string>
    <string name="home_txt2">Make an appointment</string>
    <string name="home_txt3">Show your profile</string>
    <string name="home_txt4">Customize \nyour settings</string>
    <string name="home_error_text">Server not responding!</string>
    <string name="home_txt5">My Appointments</string>
    <string name="myProfile">My Profile</string>
    <string name="fa_medkit">&#xf0fa;</string>
    <string name="fa_calendar">&#xf073;</string>
    <string name="fill_heart">&#xf004;</string>
    <string name="notfill_heart">&#xf08a;</string>
    <string name="firstName">First name:</string>
    <string name="lastName">Last name:</string>
    <string name="changePassword">Change password</string>
    <string name="editProfile">Edit profile</string>
    <string name="save">Save</string>
    <string name="oldPassword">Old Password:</string>
    <string name="newPassword">New Password:</string>
    <string name="confirm_new_password">confirm new password</string>
    <string name="type_new_password">type new password</string>
    <string name="type_old_password">type old password</string>
    <string name="navigation_drawer_open">Menu Opened</string>
    <string name="navigation_drawer_close">Menu Closed</string>

    <string name="appointmentDetail">Appointment Detail</string>
    <string name="appointmentPlace">Address:</string>
    <string name="appointmentDateAndTime">Date and time:</string>
    <string name="appointmentPatient">Name of patient:</string>
    <string name="appointmentNote">Note:</string>
    <string name="appointmentDoctorName">Doctor name:</string>
    <string name="appointmentDoctorInfo">Doctor detail:</string>
    <string name="appointmentCancel">Cancel appointment</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
</resources>
