<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context="com.wdfeww.docgl.Register">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/Join"
                    android:textColor="@color/color5"
                    android:textSize="@dimen/text_size" />

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="20dp"
                    app:srcCompat="@mipmap/logo_invert" />

                <TextView
                    android:id="@+id/txt_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/today"
                    android:textColor="@color/color5"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>

            <EditText
                android:id="@+id/edit_txt_firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:width="300dp"
                android:hint="@string/firstname"
                android:textColorHint="@color/color6"
                android:theme="@style/EditText" />

            <EditText
                android:id="@+id/edit_txt_lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:width="300dp"
                android:hint="@string/lastname"
                android:textColorHint="@color/color6"
                android:theme="@style/EditText" />

            <EditText
                android:id="@+id/edit_txt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:width="300dp"
                android:hint="@string/email"
                android:textColorHint="@color/color6"
                android:theme="@style/EditText" />

            <EditText
                android:id="@+id/edit_txt_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:width="300dp"
                android:hint="@string/username"
                android:textColorHint="@color/color6"
                android:theme="@style/EditText" />

            <EditText
                android:id="@+id/edit_txt_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:width="300dp"
                android:hint="@string/password"
                android:textColorHint="@color/color6"
                android:theme="@style/EditText" />
            <TextView
                android:id="@+id/errorMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_txt_password"
                android:layout_marginTop="5dp"
                android:theme="@style/ErrorMessage" />
            <TextView
                android:id="@+id/successMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_txt_password"
                android:layout_marginTop="5dp"
                android:theme="@style/SuccessMessage" />
            <Button
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"
                android:width="300dp"
                android:background="@drawable/btn_transparent_background"
                android:text="@string/btn_sign_up"
                android:textAllCaps="false"
                android:textColor="@drawable/btn_transparent_text_color" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>